# pandas-projetos-praticos

./: .gitignore  README.md  pyproject.toml
excel_incremental_pandas/: README.md  excel_incremental.py  incremental.py
excel_incremental_pandas/data_destino/: resultado_2025_03_27_00_36_49.xlsx
excel_incremental_pandas/data_origem/: Arquivo_1.xlsx  Arquivo_2.xlsx  resultado_2025_03_27_00_15_23.xlsx
